--- a/ACC_JE_TOC.html
+++ b/ACC_JE_TOC.html
@@ -197,6 +197,25 @@
                                 </div>
                             </div>
                         </li>
+                        <li>
+                            <div class="main-nav-link dEight">
+                                <span>SETUP</span><span><i class="fas fa-caret-down"></i></span>
+                            </div>
+                            <div class="sub-nav-link-wrapper showEight">
+                                <div class="sub-nav-link">
+                                    <a href="#">Fiscal year</a>
+                                </div>
+                                <div class="sub-nav-link">
+                                    <a href="#">Purchases</a>
+                                </div>
+                                <div class="sub-nav-link">
+                                    <a href="#">Sales</a>
+                                </div>
+                                <div class="sub-nav-link">
+                                    <a href="#">Company</a>
+                                </div>
+                            </div>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -574,7 +593,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -604,7 +623,7 @@
                                         </td>
                                 </tr>
 
-                                <tr>
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -634,7 +653,7 @@
                                         </td>
                                 </tr>
 
-                                <tr>
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
