--- a/ACC_TOC.html
+++ b/ACC_TOC.html
@@ -456,8 +456,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -496,11 +495,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -539,11 +536,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -582,11 +577,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -625,11 +618,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -668,11 +659,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -711,11 +700,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -754,7 +741,6 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
               </tbody>
