--- a/C_C_TOC.html
+++ b/C_C_TOC.html
@@ -586,8 +586,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -621,11 +620,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -659,11 +656,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -697,11 +692,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -735,11 +728,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -773,11 +764,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -811,11 +800,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -849,7 +836,6 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
                                 </td>
