--- a/C_EXR_TOC.html
+++ b/C_EXR_TOC.html
@@ -525,8 +525,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -550,8 +549,7 @@
                                     </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -572,11 +570,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -597,11 +593,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -622,11 +616,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -647,11 +639,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -672,11 +662,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -697,7 +685,6 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
                                 </td>
