--- a/C_OF_ACC_FORM.html
+++ b/C_OF_ACC_FORM.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" href="css/fontawesome.css" />
     <link rel="stylesheet" href="css/flatpicker.css">
+    <link rel="stylesheet" href="css/select2.min.css">
     <link rel="stylesheet" type="text/css" href="css/mainStyle.css" />
 </head>
 
@@ -458,11 +459,11 @@
                         </div>
                         <div class="requ">
                             <label for="">Code</label>
-                            <input type="text">
+                            <input type="text" placeholder="00000001">
                         </div>
                         <div class="requ">
                             <label for="">Name</label>
-                            <input type="text" name="">
+                            <input type="text" name="" placeholder="aly aly">
                         </div>
                         <div class="requ">
                             <label for="">Main Account</label>
@@ -488,8 +489,18 @@
             </div>
         </form>
     </section>
+    <div class="hiddenAllItems"></div>
     <script src="js/jquery_v3.3.1.js"></script>
     <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
     <script src="js/mainScript.js"></script>
 </body>
 
