--- a/INV_ST_TOC.html
+++ b/INV_ST_TOC.html
@@ -598,8 +598,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -630,11 +629,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -665,11 +662,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -700,11 +695,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -735,11 +728,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -770,11 +761,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -805,11 +794,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -840,7 +827,6 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
                             </tbody>
