--- a/PUR_P_TOC.html
+++ b/PUR_P_TOC.html
@@ -584,8 +584,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -608,10 +607,8 @@
                                             </div>
                                         </td>
                                         <td></td>
-                                    </a>
                                 </tr>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -634,10 +631,8 @@
                                             </div>
                                         </td>
                                         <td></td>
-                                    </a>
                                 </tr>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -660,10 +655,8 @@
                                             </div>
                                         </td>
                                         <td></td>
-                                    </a>
                                 </tr>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -686,10 +679,8 @@
                                             </div>
                                         </td>
                                         <td></td>
-                                    </a>
                                 </tr>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -712,10 +703,6 @@
                                             </div>
                                         </td>
                                         <td></td>
-                                    </a>
-
-
-
                             </tbody>
                         </table>
                         <!--                                 <div class="flexCenter bagntionBTNS">
