--- a/PUR_RI_TOC.html
+++ b/PUR_RI_TOC.html
@@ -564,7 +564,7 @@
                             </thead>
                             <tbody>
                                 
-                                <tr>
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
