--- a/PUR_V_TOC.html
+++ b/PUR_V_TOC.html
@@ -312,53 +312,18 @@
         </div>
 
         <div class="flexBetween inner-bagntion">
-          <div class="filter">
-            <!--<a href="#" class="filters"><span><i class="fas fa-filter"></i></span><span>Fillter</span><span><i
-                  class="fas fa-caret-down"></i></span></a>-->
-            <!--<a href="#" class="filters"><span><i class="fas fa-filter"></i></span><span>Fillter</span><span><i
-                  class="fas fa-caret-down"></i></span></a>-->
-            <!--<a href="#" class=""><span>Print</span><span><i class="fas fa-caret-down"></i></span></a>-->
-            <a href="#" class="action"><span>Action</span><span><i class="fas fa-caret-down"></i></span></a>
+                    <div class="filter">
+                        <a href="#" class="action"><span>Action</span><span></a><i class="fas fa-caret-down"></i></span>
+                    </div>
 
-            <!--<div class="filterMath d-none">
-              <ul>
-                <li>Export</li>
-                <li>Export 2</li>
-                <li>طباعه</li>
-                <li>Send By Email</li>
-                <li>Delete</li>
-              </ul>
-            </div>
-
-            <div class="chooseMath d-none">
-              <ul>
-                <li>Export</li>
-                <li>Export 2</li>
-                <li>طباعه</li>
-                <li>Send By Email</li>
-                <li>Delete</li>
-              </ul>
-            </div>-->
-
-            <div class="actionMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Import</li>
-                                <li>Print</li>
-                                <li>PDF</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
-          </div>
-
-          <div class="sort">
-            <span class="nB">
-              <span><i class="fas fa-angle-left"></i></span>
-              <span><i class="fas fa-angle-right"></i></span>
-            </span>
-            <span class="pageNum"> <span>1</span>/<span>2</span> </span>
-          </div>
-        </div>
+                    <div class="sort">
+                        <span class="nB">
+                            <span><i class="fas fa-angle-left"></i></span>
+                            <span><i class="fas fa-angle-right"></i></span>
+                        </span>
+                        <span class="pageNum"> <span>1</span>/<span>2</span> </span>
+                    </div>
+                </div>
       </div>
 
       <div class="site-sections-wrapper">
@@ -468,7 +433,63 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
+                <tr onclick="location.href='http://#';">
+                    <td class="checkNum">
+                      <input class="" type="checkbox" id="" name="" />
+                    </td>
+
+                    <td><span>shaker</span></td>
+
+                    <td class="ellipsisOne"><span>s@s.com</span></td>
+                    <td class="ellipsisTwo"><span>01112558651</span></td>
+                    <td class="ellipsisThree">
+                      <span></span>
+                    </td>
+                    <td class="ellipsisFour"><span>maadi-cairo</td>
+                    <td class="ellipsisFive"><span>www.shaker.com</span></td>
+                    <td class="ellipsisSix"><span>1</span></td>
+                    <td>
+                      <div class="item-action">
+                        <div><i class="fas fa-edit"></i><a href="#">edit</a></div>
+                        <div class="itemActionRed"><i class="far fa-trash-alt"></i><a href="#">delete</a></div>
+                      </div>
+                    </td>
+                    <td>
+                      <!-- 8-justForGrid -->
+                    </td>
+                    <td>
+                      <!-- 9-justForGrid -->
+                    </td>
+                </tr>
+                <tr onclick="location.href='http://#';">
+                    <td class="checkNum">
+                      <input class="" type="checkbox" id="" name="" />
+                    </td>
+
+                    <td><span>shaker</span></td>
+
+                    <td class="ellipsisOne"><span>s@s.com</span></td>
+                    <td class="ellipsisTwo"><span>01112558651</span></td>
+                    <td class="ellipsisThree">
+                      <span></span>
+                    </td>
+                    <td class="ellipsisFour"><span>maadi-cairo</td>
+                    <td class="ellipsisFive"><span>www.shaker.com</span></td>
+                    <td class="ellipsisSix"><span>1</span></td>
+                    <td>
+                      <div class="item-action">
+                        <div><i class="fas fa-edit"></i><a href="#">edit</a></div>
+                        <div class="itemActionRed"><i class="far fa-trash-alt"></i><a href="#">delete</a></div>
+                      </div>
+                    </td>
+                    <td>
+                      <!-- 8-justForGrid -->
+                    </td>
+                    <td>
+                      <!-- 9-justForGrid -->
+                    </td>
+                </tr>
+                <tr onclick="location.href='http://#';">
                   <a href="bal7a">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
@@ -496,10 +517,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -526,10 +545,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -556,10 +573,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr  onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -586,10 +601,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -616,10 +629,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -646,10 +657,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -676,10 +685,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -706,10 +713,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -736,10 +741,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -766,10 +769,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';"> 
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -796,10 +797,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -826,10 +825,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -856,10 +853,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -886,10 +881,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -916,10 +909,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -946,10 +937,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -976,10 +965,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -1006,10 +993,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -1036,10 +1021,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -1066,10 +1049,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -1096,10 +1077,8 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -1126,73 +1105,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
-                </tr>
-                <tr>
-                  <a href="bal7a">
-                    <td class="checkNum">
-                      <input class="" type="checkbox" id="" name="" />
-                    </td>
-
-                    <td><span>shaker</span></td>
-
-                    <td class="ellipsisOne"><span>s@s.com</span></td>
-                    <td class="ellipsisTwo"><span>01112558651</span></td>
-                    <td class="ellipsisThree">
-                      <span></span>
-                    </td>
-                    <td class="ellipsisFour"><span>maadi-cairo</td>
-                    <td class="ellipsisFive"><span>www.shaker.com</span></td>
-                    <td class="ellipsisSix"><span>1</span></td>
-                    <td>
-                      <div class="item-action">
-                        <div><i class="fas fa-edit"></i><a href="#">edit</a></div>
-                        <div class="itemActionRed"><i class="far fa-trash-alt"></i><a href="#">delete</a></div>
-                      </div>
-                    </td>
-                    <td>
-                      <!-- 8-justForGrid -->
-                    </td>
-                    <td>
-                      <!-- 9-justForGrid -->
-                    </td>
-                  </a>
-                </tr>
-                <tr>
-                  <a href="bal7a">
-                    <td class="checkNum">
-                      <input class="" type="checkbox" id="" name="" />
-                    </td>
-
-                    <td><span>shaker</span></td>
-
-                    <td class="ellipsisOne"><span>s@s.com</span></td>
-                    <td class="ellipsisTwo"><span>01112558651</span></td>
-                    <td class="ellipsisThree">
-                      <span></span>
-                    </td>
-                    <td class="ellipsisFour"><span>maadi-cairo</td>
-                    <td class="ellipsisFive"><span>www.shaker.com</span></td>
-                    <td class="ellipsisSix"><span>1</span></td>
-                    <td>
-                      <div class="item-action">
-                        <div><i class="fas fa-edit"></i><a href="#">edit</a></div>
-                        <div class="itemActionRed"><i class="far fa-trash-alt"></i><a href="#">delete</a></div>
-                      </div>
-                    </td>
-                    <td>
-                      <!-- 8-justForGrid -->
-                    </td>
-                    <td>
-                      <!-- 9-justForGrid -->
-                    </td>
-                  </a>
                 </tr>
 
-
-
-
-              </tbody>
+            </tbody>
             </table>
 
           </div>
