--- a/T_TG_TOC.html
+++ b/T_TG_TOC.html
@@ -312,53 +312,18 @@
         </div>
 
         <div class="flexBetween inner-bagntion">
-          <div class="filter">
-            <!--<a href="#" class="filters"><span><i class="fas fa-filter"></i></span><span>Fillter</span><span><i
-                  class="fas fa-caret-down"></i></span></a>-->
-            <!--<a href="#" class="filters"><span><i class="fas fa-filter"></i></span><span>Fillter</span><span><i
-                  class="fas fa-caret-down"></i></span></a>-->
-            <!--<a href="#" class=""><span>Print</span><span><i class="fas fa-caret-down"></i></span></a>-->
-            <a href="#" class="action"><span>Action</span><span><i class="fas fa-caret-down"></i></span></a>
+                    <div class="filter">
+                        <a href="#" class="action"><span>Action</span><span></a><i class="fas fa-caret-down"></i></span>
+                    </div>
 
-            <!--<div class="filterMath d-none">
-              <ul>
-                <li>Export</li>
-                <li>Export 2</li>
-                <li>طباعه</li>
-                <li>Send By Email</li>
-                <li>Delete</li>
-              </ul>
-            </div>
-
-            <div class="chooseMath d-none">
-              <ul>
-                <li>Export</li>
-                <li>Export 2</li>
-                <li>طباعه</li>
-                <li>Send By Email</li>
-                <li>Delete</li>
-              </ul>
-            </div>-->
-
-            <div class="actionMath d-none">
-                            <ul>
-                                <li>Export</li>
-                                <li>Import</li>
-                                <li>Print</li>
-                                <li>PDF</li>
-                                <li>Delete</li>
-                            </ul>
-                        </div>
-          </div>
-
-          <div class="sort">
-            <span class="nB">
-              <span><i class="fas fa-angle-left"></i></span>
-              <span><i class="fas fa-angle-right"></i></span>
-            </span>
-            <span class="pageNum"> <span>1</span>/<span>2</span> </span>
-          </div>
-        </div>
+                    <div class="sort">
+                        <span class="nB">
+                            <span><i class="fas fa-angle-left"></i></span>
+                            <span><i class="fas fa-angle-right"></i></span>
+                        </span>
+                        <span class="pageNum"> <span>1</span>/<span>2</span> </span>
+                    </div>
+                </div>
       </div>
 
       <div class="site-sections-wrapper">
@@ -410,8 +375,7 @@
                 </tr>
               </thead>
               <tbody>
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -436,11 +400,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -465,11 +427,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -494,11 +454,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -523,11 +481,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -552,11 +508,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -581,11 +535,9 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
-                <tr>
-                  <a href="bal7a">
+                <tr onclick="location.href='http://#';">
                     <td class="checkNum">
                       <input class="" type="checkbox" id="" name="" />
                     </td>
@@ -610,7 +562,6 @@
                     <td>
                       <!-- 9-justForGrid -->
                     </td>
-                  </a>
                 </tr>
 
                 </td>
