--- a/chartOfAccounts.html
+++ b/chartOfAccounts.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" href="css/fontawesome.css" />
     <link rel="stylesheet" href="css/flatpicker.css">
+    <link rel="stylesheet" href="css/select2.min.css">
     <link rel="stylesheet" type="text/css" href="css/mainStyle.css" />
 </head>
 
@@ -453,7 +454,7 @@
 
                 <div class="flexBetween inner-bagntion">
                     <div class="filter">
-                        <a href="#" class="action"><span>Action</span><span></a><i class="fas fa-caret-down"></i></span>
+                        <!-- <a href="#" class="action"><span>Action</span><span></a><i class="fas fa-caret-down"></i></span> -->
                     </div>
 
                     <div class="sort">
@@ -492,7 +493,7 @@
                     <ul class="tree">
                         <li>
                             <!-- Big Branch -->
-                            <div class="bonga">
+                            <div class="bonga" onclick="location.href='http://#';">
                                 <i class="fas fa-folder"></i>
                                 <i class="fas fa-folder-open d-none"></i>
                                 <span>Parent One</span>
@@ -500,7 +501,7 @@
                             <ul class="d-none">
                                 <li>
                                     <!-- 2ST Branch level 1-->
-                                    <div class="bonga">
+                                    <div class="bonga" onclick="location.href='http://#';">
                                         <i class="fas fa-folder"></i>
                                         <i class="fas fa-folder-open d-none"></i>
                                         <span>child 1</span>
@@ -508,7 +509,7 @@
                                     <ul class="d-none">
                                         <li>
                                             <!-- 2ST Branch level 1-->
-                                            <div class="bonga">
+                                            <div class="bonga" onclick="location.href='http://#';">
                                                 <i class="fas fa-folder"></i>
                                                 <i class="fas fa-folder-open d-none"></i>
                                                 <span>pree child 1</span>
@@ -516,7 +517,7 @@
                                             <ul class="d-none">
                                                 <li>
                                                     <!-- 2ST Branch level 1-->
-                                                    <div class="bonga">
+                                                    <div class="bonga" onclick="location.href='http://#';">
                                                         <i class="fas fa-folder"></i>
                                                         <i class="fas fa-folder-open d-none"></i>
                                                         <span>Grand pree child 1</span>
@@ -524,14 +525,14 @@
                                                     <ul class="d-none">
                                                         <li>
                                                             <!-- 2ST Branch level 1-->
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span> pree Grand pree child 1</span>
                                                             </div>
                                                         </li>
                                                         <li>
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span>pree Grand pree child 2</span>
@@ -540,7 +541,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <div class="bonga">
+                                                    <div class="bonga" onclick="location.href='http://#';">
                                                         <i class="fas fa-folder"></i>
                                                         <i class="fas fa-folder-open d-none"></i>
                                                         <span>Grand pree child 2</span>
@@ -549,7 +550,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <div class="bonga">
+                                            <div class="bonga" onclick="location.href='http://#';">
                                                 <i class="fas fa-folder"></i>
                                                 <i class="fas fa-folder-open d-none"></i>
                                                 <span>pree child 2</span>
@@ -558,7 +559,7 @@
                                     </ul>
                                 </li>
                                 <li>
-                                    <div class="bonga">
+                                    <div class="bonga" onclick="location.href='http://#';">
                                         <i class="fas fa-folder"></i>
                                         <i class="fas fa-folder-open d-none"></i>
                                         <span>child 2</span>
@@ -566,7 +567,7 @@
                                     <ul class="d-none">
                                         <li>
                                             <!-- 2ST Branch level 1-->
-                                            <div class="bonga">
+                                            <div class="bonga" onclick="location.href='http://#';">
                                                 <i class="fas fa-folder"></i>
                                                 <i class="fas fa-folder-open d-none"></i>
                                                 <span>pree child 1</span>
@@ -574,7 +575,7 @@
                                             <ul class="d-none">
                                                 <li>
                                                     <!-- 2ST Branch level 1-->
-                                                    <div class="bonga">
+                                                    <div class="bonga" onclick="location.href='http://#';">
                                                         <i class="fas fa-folder"></i>
                                                         <i class="fas fa-folder-open d-none"></i>
                                                         <span>Grand pree child 1</span>
@@ -582,7 +583,7 @@
                                                     <ul class="d-none">
                                                         <li>
                                                             <!-- 2ST Branch level 1-->
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span> pree Grand pree child 1</span>
@@ -590,7 +591,7 @@
                                                             <ul class="d-none">
                                                                 <li>
                                                                     <!-- 2ST Branch level 1-->
-                                                                    <div class="bonga">
+                                                                    <div class="bonga" onclick="location.href='http://#';">
                                                                         <i class="fas fa-folder"></i>
                                                                         <i class="fas fa-folder-open d-none"></i>
                                                                         <span>Damn pree Grand pree child 1</span>
@@ -598,7 +599,7 @@
                                                                     <ul class="d-none">
                                                                         <li>
                                                                             <!-- 2ST Branch level 1-->
-                                                                            <div class="bonga">
+                                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                                 <i class="fas fa-folder"></i>
                                                                                 <i
                                                                                     class="fas fa-folder-open d-none"></i>
@@ -607,7 +608,7 @@
                                                                             </div>
                                                                         </li>
                                                                         <li>
-                                                                            <div class="bonga">
+                                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                                 <i class="fas fa-folder"></i>
                                                                                 <i
                                                                                     class="fas fa-folder-open d-none"></i>
@@ -616,7 +617,7 @@
                                                                             </div>
                                                                         </li>
                                                                         <li>
-                                                                            <div class="bonga">
+                                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                                 <i class="fas fa-folder"></i>
                                                                                 <i
                                                                                     class="fas fa-folder-open d-none"></i>
@@ -627,14 +628,14 @@
                                                                     </ul>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="bonga">
+                                                                    <div class="bonga" onclick="location.href='http://#';">
                                                                         <i class="fas fa-folder"></i>
                                                                         <i class="fas fa-folder-open d-none"></i>
                                                                         <span>Damn pree Grand pree child 2</span>
                                                                     </div>
                                                                 </li>
                                                                 <li>
-                                                                    <div class="bonga">
+                                                                    <div class="bonga" onclick="location.href='http://#';">
                                                                         <i class="fas fa-folder"></i>
                                                                         <i class="fas fa-folder-open d-none"></i>
                                                                         <span> Damnpree Grand pree child 3</span>
@@ -643,14 +644,14 @@
                                                             </ul>
                                                         </li>
                                                         <li>
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span>pree Grand pree child 2</span>
                                                             </div>
                                                         </li>
                                                         <li>
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span>pree Grand pree child 3</span>
@@ -659,7 +660,7 @@
                                                     </ul>
                                                 </li>
                                                 <li>
-                                                    <div class="bonga">
+                                                    <div class="bonga" onclick="location.href='http://#';">
                                                         <i class="fas fa-folder"></i>
                                                         <i class="fas fa-folder-open d-none"></i>
                                                         <span>Grand pree child 2</span>
@@ -667,21 +668,21 @@
                                                     <ul class="d-none">
                                                         <li>
                                                             <!-- 2ST Branch level 1-->
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span> pree Grand pree child 1</span>
                                                             </div>
                                                         </li>
                                                         <li>
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span>pree Grand pree child 2</span>
                                                             </div>
                                                         </li>
                                                         <li>
-                                                            <div class="bonga">
+                                                            <div class="bonga" onclick="location.href='http://#';">
                                                                 <i class="fas fa-folder"></i>
                                                                 <i class="fas fa-folder-open d-none"></i>
                                                                 <span>pree Grand pree child 3</span>
@@ -692,7 +693,7 @@
                                             </ul>
                                         </li>
                                         <li>
-                                            <div class="bonga">
+                                            <div class="bonga" onclick="location.href='http://#';">
                                                 <i class="fas fa-folder"></i>
                                                 <i class="fas fa-folder-open d-none"></i>
                                                 <span>pree child 2</span>
