--- a/INV_IC_TOC.html
+++ b/INV_IC_TOC.html
@@ -512,8 +512,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -534,11 +533,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -559,11 +556,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -584,11 +579,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -609,11 +602,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -634,11 +625,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -659,11 +648,9 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
-                                <tr>
-                                    <a href="bal7a">
+                                <tr onclick="location.href='http://#';">
                                         <td class="checkNum">
                                             <input class="" type="checkbox" id="" name="" />
                                         </td>
@@ -684,7 +671,6 @@
                                         <td>
                                             <!-- 9-justForGrid -->
                                         </td>
-                                    </a>
                                 </tr>
 
                             </tbody>
