--- a/itemTransaction.html
+++ b/itemTransaction.html
@@ -772,8 +772,18 @@
         </div>
     </form>
     </section>
+    <div class="hiddenAllItems"></div>
     <script src="js/jquery_v3.3.1.js"></script>
     <script src="js/flatpicker.js"></script>
+    <script src="js/dataTable.js"></script>
+    <script src="js/dataTabeButtons.js"></script>
+    <script src="js/buttons.flash.min.js"></script>
+    <script src="js/jszip.min.js"></script>
+    <script src="js/pdfmake.min.js"></script>
+    <script src="js/vfs_fonts.js"></script>
+    <script src="js/buttons.html5.min.js"></script>
+    <script src="js/buttons.print.min.js"></script>
+    <script src="js/select2.min.js"></script>
     <script src="js/mainScript.js"></script>
 </body>
 
