--- a/SETUP_company_ADN.html
+++ b/SETUP_company_ADN.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>FISCAL YEAR SETUP</title>
+    <title>COMPANY SETUP</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" type="text/css" href="css/jquery-ui.min.css" />
     <link rel="stylesheet" type="text/css" href="css/flatpicker.css" />
@@ -433,7 +433,7 @@
                 <div class="data-title-search-container">
                     <div class="data-title-wrapper breadcrumb-wrapper">
                         <div class="pageName">
-                            <span><a href="SETUP_fisclYear_TOC.html">FISCAL YEAR /</span></a><span>NEW</span>
+                            <span>COMPANY</span>
                         </div>
                     </div>
 
